[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ligtit.png" type="Texture" id=2]
[ext_resource path="res://Sprites/CombSprite.png" type="Texture" id=3]
[ext_resource path="res://Sprites/healthbar_border.png" type="Texture" id=5]
[ext_resource path="res://Sprites/healthbar_empty.png" type="Texture" id=6]
[ext_resource path="res://Sprites/healthbar_full.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=12]
radius = 30.0
height = 40.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 15.0
height = 15.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 49 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Slice/Slice:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Slice/Shunt:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Slice"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Slice/Slice:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Slice/Shunt:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=9]
resource_name = "Walk"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.45, 0.55, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 49, 50, 51, 52, 53, 54, 0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 43.3333, 11.4167 )

[sub_resource type="CircleShape2D" id=11]
radius = 33.0067

[node name="Player" type="KinematicBody2D"]
position = Vector2( 71, 20 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( 15, 42 )
shape = SubResource( 12 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
position = Vector2( 15, 42 )
scale = Vector2( 2.5, 2.5 )
z_index = 200
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/Slice = SubResource( 10 )
anims/Walk = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 96, -31 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 55
frame = 49

[node name="Slice" type="Area2D" parent="Sprite"]

[node name="Slice" type="CollisionShape2D" parent="Sprite/Slice"]
position = Vector2( 22.6667, 33 )
shape = SubResource( 7 )
disabled = true

[node name="Shunt" type="CollisionShape2D" parent="Sprite/Slice"]
position = Vector2( -27, 15.3333 )
scale = Vector2( 3, 3 )
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 17, 16 )
current = true
smoothing_enabled = true
smoothing_speed = 2.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 18, 29 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
offset = Vector2( -12, 0.25 )
shadow_enabled = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -24.0
margin_top = -35.0
margin_right = 16.0
margin_bottom = 5.0
rect_scale = Vector2( 2.4, 0.9 )
max_value = 500.0
value = 500.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Sprite/Slice" to="." method="_on_Slice_body_entered"]
